charts/kyverno-policies/disallow-exec.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-exec
  annotations:
    policies.kyverno.io/title: Block Pod Exec by Pod Name
    policies.kyverno.io/category: Sample
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      The `exec` command may be used to gain shell access, or run other commands, in a Pod's container. While this can
      be useful for troubleshooting purposes, it could represent an attack vector and is discouraged.
spec:
  validationFailureAction: Audit
  background: false
  rules:
  - name: deny-exec
    match:
      any:
      - resources:
          kinds:
          - Pod/exec
    validate:
      message: Exec'ing into Pods is not allowed.
